        Learn Coil by level up
        Ability: Oblivious->Thick Fat

    Galarian Weezing:
        Learns Misty Explosion by level up

    Rhyperior:
        Learns Rock Wrecker upon evolving

    Happiny:
        Base exp: 110->250

    Pinsir:
        Catch rate: 45->90

    Mime Jr./Mr. Mime/Mr. Rime (not in main game):
        Gender Ratio: 50/50->100/0
        Type: Psychic/Fairy->Psychic

    Elekid:
        Atk: 63->65
        Def: 37->40
        SpA: 65->70
        Learns Electric Terrain by level up

    Electabuzz:
        Atk: 83->85
        Def: 57->60
        SpA: 95->100
        Learns Electric Terrain by level up

    Electivire:
        Atk: 123->125
        Def: 67->70
        SpA: 95->100

    Magby:
        Def: 37->40
        Spe: 83->85

    Magmar:
        Def: 57->60
        Spe: 93->95

    Magmortar:
        Atk: 95->100
        Def: 67->70
        Spe: 83->85

    Magikarp:
        Learns Hydro Pump at level 35
        Learns Bounce at level 45

    Gyarados:
        Type: Water/Flying->Water

    Eevee (not in main game):
        Now evolves into Espeon with a Sun Stone
        Now evolves into Umbreon with a Moon Stone
        Now evolves into Sylveon with a Dawn Stone

    Aerodactyl:
        Learns Double-Edge, Head Smash, and Brave Bird by level up

    Munchlax (not in main game):
        Can also evolve at level 20

    Snorlax (not in main game):
        Learns Slack Off by level up

    Zapdos:
        Learns Air Slash by TM

    Noctowl:
        Learns Skill Swap by TM (Teal Mask addition)

    Togepi (not in main game):
        Can also evolve at level 16

    Azurill:
        Can also evolve at level 10
        Type: Normal/Fairy->Water/Fairy
        Gender Ratio: 25/75->50/50
        Catch rate: 150->255

    Marill:
        HP: 70->75
        Atk: 20->40
        Def: 50->60
        SpA: 20->40
        SpD: 50->60

    Azumarill:
        Atk: 50->60
        Spe: 50->60

    Sunflora:
        Learns Morning Sun by level up
