@@ -10257,6 +10257,7 @@ static const u16 sScytherTeachableLearnset[] = {
     MOVE_LASER_FOCUS,
     MOVE_LEER,
     MOVE_LIGHT_SCREEN,
+    MOVE_LUNGE,
     MOVE_MIMIC,
     MOVE_NIGHT_SLASH,
     MOVE_POUNCE,
@@ -18066,6 +18067,7 @@ static const u16 sScizorTeachableLearnset[] = {
     MOVE_LASER_FOCUS,
     MOVE_LEER,
     MOVE_LIGHT_SCREEN,
+    MOVE_LUNGE,
     MOVE_METAL_CLAW,
     MOVE_MIMIC,
     MOVE_NIGHT_SLASH,
@@ -45212,6 +45214,7 @@ static const u16 sScolipedeTeachableLearnset[] = {
     MOVE_INFESTATION,
     MOVE_IRON_DEFENSE,
     MOVE_IRON_TAIL,
+    MOVE_LUNGE,
     MOVE_MEGAHORN,
     MOVE_PAYBACK,
     MOVE_PIN_MISSILE,
@@ -70558,6 +70561,7 @@ static const u16 sKleavorTeachableLearnset[] = {
     MOVE_HYPER_BEAM,
     MOVE_LEER,
     MOVE_LIGHT_SCREEN,
+    MOVE_LUNGE,
     MOVE_NIGHT_SLASH,
     MOVE_POUNCE,
     MOVE_PROTECT,
